Added scene with player's results